# libgooglepinyin

./: .gitignore  CMakeLists.txt  README.md  setupenv.sh
doc/: main.key
include/: dictbuilder.h  dicttrie.h  loghelper.h
src/: CMakeLists.txt  dictbuilder.cpp  dicttrie.cpp  spellingtable.cpp
test/: CMakeLists.txt  convertor_unittest.cpp  dictbuilder_unittest.cpp  loaddict_unittest.cpp  loghelper.cpp  pinyinime_unittest.cpp
tools/: CMakeLists.txt  pinyin_convertor.cpp  pinyin_man.cpp  pinyinime_dictbuilder.cpp
